# st_df_extension

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_test.py  test_with_datatype_validation.py
st_df_extension/: filter_dataframe.py
